# FactTrace-AI

./: .gitignore  README.md
checker-of-claims/: .gitignore  FactTrace.code-workspace  HACKATHON_README.md  INTEGRATION_README.md  README.md  demo_output.py  pyproject.toml  run_hackathon.sh  start_integrated.sh
checker-of-claims/.agent/: implementation_plan.md
checker-of-claims/docs/: AGENTS.md  ARCHITECTURE.md  PLANS.md  PROJECT_PLAN.md  ROADMAP.md  SCHEMAS.md  TRUST_POLICY.md
checker-of-claims/src/checker_of_facts/: __init__.py  api.py  cli.py  config.py  data_loader.py  engine.py  hackathon_agents.py  hackathon_cli.py  hackathon_engine.py  hackathon_models.py  models.py
checker-of-claims/src/checker_of_facts/agents/: sdk.py
checker-of-claims/src/checker_of_facts/mcp/: __init__.py  workspace.py
checker-of-claims/tests/: test_engine.py
truth-jury-frontend/: package-lock.json  package.json  tailwind.config.ts
truth-jury-frontend/src/: App.tsx  index.css
truth-jury-frontend/src/components/: ChatMessage.tsx  ClaimCard.tsx  PersonaAvatar.tsx  PersonaModal.tsx  TypingIndicator.tsx  VerdictCard.tsx
truth-jury-frontend/src/data/: debateScripts.ts  personas.ts
truth-jury-frontend/src/hooks/: useLiveDebate.ts
truth-jury-frontend/src/lib/: api.ts
truth-jury-frontend/src/pages/: DebatePage.tsx  Index.tsx  LiveDebatePage.tsx
truth-jury-frontend/src/types/: debate.ts
