[project]
name = "checker_of_facts"
version = "0.1.0"
description = "Bounded-evidence fact checking with an agent jury."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "openai-agents>=0.7.0",
  "python-dotenv>=1.0.1",
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[project.scripts]
factcheck = "checker_of_facts.cli:main"
hackathon = "checker_of_facts.hackathon_cli:main"
api = "checker_of_facts.api:main"

[tool.ruff]
line-length = 100

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
